--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -94,6 +94,7 @@ main {
 
 .weather h1 {
     font-size: 1.7rem;
+    margin-right: 1rem;
 }
 
 .weather h2 {
